# rust-scripts

./: .gitignore  Cargo.toml  copy.rs  copy.txt  expand.txt  md.md  poems.txt  quotes.txt
notes/: memory.md  raw_pointers.md  unsafe_rust.md
notes/3p+1/: out-design.txt  out-hyphenated.txt  out_final_1000_spaced.txt  out_final_1000_zeroed.txt
notes/algorithms/sorting/: all.md
projects/: README.md
projects/genetic_algos/: 1.rs
projects/go_examples_rustified/: conways_game_of_life.rs  fibonacci_closure.rs
projects/sudoku/: 1_naive.rs
quirks/: k.rs  type_assert.rs
src/: .temp.rs  conwei.rs  macros.rs  main.rs  tui.rs
src/algorithms/: mod.rs  prime_finder.rs  sorting.rs
src/base/: base64.rs  extended.rs  mod.rs
src/data_structures/: linked_list.rs
src/enc_dec/: mod.rs  rsa.rs
src/functions/: base64.rs  compression.rs  conversions.rs  depend_s.rs  depends.rs  io_helpers.rs  macros_.rs  math_manipulation.rs  miscs.rs  mod.rs  random.rs  read_write.rs  rust_quirks.rs
src/hash/: keccak.rs  mod.rs  sha.rs
src/hash/sha/: mod.rs  sha2.rs  sha3.rs
src/mathematica/: README.md  mod.rs
src/mathematica/angles/: mod.rs
src/mathematica/errors/: mod.rs
src/mathematica/logarithims/: mod.rs
src/mathematica/matrices/: get_set.rs  initialization.rs  internals.rs  mod.rs  old.rs  prelude.rs  trait_defs.rs
src/mathematica/vectors/: mod.rs
src/mathematica/vectors/v1_3d/: internals.rs  misc.rs  mod.rs  trait_defs.rs
src/mathematica/vectors/v2_3d/: mod.rs
temp/: p1.rs  p2.rs  p3.rs  p4.rs
