[package]
name = "rust-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*" # "0.8.5"
num = "*"
flate2 = "*"
nalgebra = "0.32.2"
num-bigint = "*"
num-prime = "*"
num-integer = "*"
rsa = "*"


# num-traits = "0.2.15"
# rustacuda = "*"
# rayon = "*" #"1.5"
# sha3 = "*"
# ferrisgram = "*"
# tokio = "*"
# regex = "*"
# nalgebra = "0.32.2"
# num-traits = "0.2"

